support multiple repositories

--- a/generator/defaultconfig.yaml
+++ b/generator/defaultconfig.yaml
@@ -1,4 +1,19 @@
 api_token: null
+repositories:
+  - matomo-org/matomo
+  - matomo-org/tag-manager
+  - matomo-org/matomo-log-analytics
+  - matomo-org/matomo-php-tracker
+  - matomo-org/referrer-spam-blacklist
+  - matomo-org/tracker-proxy
+  - matomo-org/device-detector
+  - matomo-org/searchengine-and-social-list
+  - matomo-org/component-network
+  - matomo-org/component-ini
+  - matomo-org/component-decompress
+  - matomo-org/component-cache
+  - matomo-org/matomo-package
+  - matomo-org/matomo-icons
 labels_to_ignore:
   - wontfix
   - not-in-changelog
