--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+atomicwrites==1.3.0
+attrs==18.2.0
 certifi==2018.11.29
 chardet==3.0.4
 idna==2.8
+more-itertools==5.0.0
 pkg-resources==0.0.0
+pluggy==0.8.1
+py==1.7.0
+pytest==4.2.0
+PyYAML==3.13
 requests==2.21.0
+six==1.12.0
 urllib3==1.24.1
